flux/academy/observability/gotify/app/deployment.sops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: gotify
  labels:
    app.kubernetes.io/name: gotify
spec:
  template:
    spec:
      containers:
sops:
  kms: []
  gcp_kms: []
  azure_kv: []
  hc_vault: []
  age:
    - recipient: age1rl8s5e3al83x28ecwpn7ed3773uvyuhhvqujc47dz4chpw7xvc6qlzd8hq
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiSERkV2pwSkVyZ3JPUGFE
[...]
        YKLCMgB4MgvyAQPFfaOvzqXoEggyHZ9k1xKl4xgMdtKRCWUbFoO6kw==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2025-02-21T21:55:18Z"
  mac: ENC[AES256_GCM,data:NLL6BcWphIK9V55/ShggVWqHzda+P6tn6Z/Lrc90FW13hPF1Iog5/hRGIythAKoOWlCMnRuIvgmotvkJCLyua7HczJXMeT6laqLikpS8H+ZZF1v0mO2vpDU2ltM6Ofi/4Xd2lVc/ubZJZD/JKTbDqV+BxgAAK3hfQWaW1wQUMBI=,iv:TtYw6/D1G+MUgJy6Fn2DRXMaLvhj65AFJI+dIOF5bPk=,tag:BMfNgEPrR/tEGdVe81hMGg==,type:str]
  pgp: []
  encrypted_regex: ^(username|password|user|pass|secret|token|ca|data|stringData|auth|env)$
  version: 3.9.4
