flux/academy/observability/gotify/app/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: gotify
  labels:
    app.kubernetes.io/name: gotify
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: gotify
