flux/academy/observability/gotify/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gotify-ingress
  namespace: gotify
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gotify.k8s.chancey.dev`)
      kind: Rule
      priority: 1
      services:
        - name: gotify
          kind: Service
          port: 80
  tls:
    secretName: gotify-cert-tls
